# claude-ddos_trace

./: .gitignore  README.md  config.yaml  config_prod.yaml  debug_run.py  findings.md  issues.md  progress.md  pyproject.toml  setup.py  task_plan.md
.claude/: settings.local.json
docs/: Neflow原始数据结构.txt  deploy.md  ~$OS异常流量分类.docx  业务流程说明.md  功能介绍.md  需求.md
docs/deploy/: deploy.md  download_wheels.sh  prod_issues.md  requirements.txt
docs/design/: architecture.md  clickhouse-optimization.md  operator-output-assessment.md  output-refactor-checklist.md  threat-intel-ui-design.md  threat-intelligence-init-clickhouse.sql  threat-intelligence-init.sql  threat-intelligence-overall-design.md
docs/source/: system_base_attack_type.csv  攻击告警表结构.txt  攻击类型定义.txt  攻击阈值摘要与明细表定义.txt  监测对象表.txt
docs/spec_add/: 抗DDoS威胁情报库-新增威胁类型.docx
output/: traffic_classification_report.csv  traffic_classification_report_2026041417444901270003.csv
src/ddos_trace/: __init__.py  __main__.py  _compat.py  analyzer.py  api.py  report_browser.py  threat_intel_browser.py  threat_intel_pages.py
src/ddos_trace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ddos_trace/clustering/: fingerprint.py
src/ddos_trace/config/: models.py
src/ddos_trace/data/: alert_loader.py  loader.py  mysql_loader.py  threat_intel_dashboard.py  threat_intel_lookup.py  threat_intel_writer.py
src/ddos_trace/detection/: anomaly.py
src/ddos_trace/features/: extraction.py
src/ddos_trace/reports/: generator.py
src/ddos_trace/traceback/: path.py
