[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddos-trace"
version = "1.0.0"
description = "DDoS 攻击溯源分析器 - 基于 NetFlow 数据的智能化分析工具"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.2.0",
    "clickhouse-driver>=0.2.5",
    "pymysql>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hdbscan = ["hdbscan>=0.8.29"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
ddos-trace = "ddos_trace.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
