[build-system]
requires = [
    "setuptools>=59.6,<60; python_version<'3.7'",
    "setuptools>=68.0; python_version>='3.7'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ddos-trace"
version = "1.0.0"
description = "DDoS 攻击溯源分析器 - 基于 NetFlow 数据的智能化分析工具"
requires-python = ">=3.6"
dependencies = [
    "dataclasses>=0.8; python_version<'3.7'",
    "pandas>=1.1.5,<1.2; python_version<'3.7'",
    "pandas>=1.5.0; python_version>='3.7'",
    "numpy>=1.19.5,<1.20; python_version<'3.7'",
    "numpy>=1.23.0; python_version>='3.7'",
    "matplotlib>=3.3.4,<3.4; python_version<'3.7'",
    "matplotlib>=3.6.0; python_version>='3.7'",
    "scikit-learn>=0.24.2,<1.0; python_version<'3.7'",
    "scikit-learn>=1.2.0; python_version>='3.7'",
    "clickhouse-driver>=0.2.5,<0.2.6; python_version<'3.7'",
    "clickhouse-driver>=0.2.5; python_version>='3.7'",
    "pymysql>=0.9.3,<1.1; python_version<'3.7'",
    "pymysql>=1.1.0; python_version>='3.7'",
    "fastapi>=0.63.0,<0.79; python_version<'3.7'",
    "fastapi>=0.100.0; python_version>='3.7'",
    "uvicorn>=0.16.0,<0.17; python_version<'3.7'",
    "uvicorn>=0.23.0; python_version>='3.7'",
    "pyyaml>=5.4.1,<6.0.1; python_version<'3.7'",
    "pyyaml>=6.0; python_version>='3.7'",
]

[project.optional-dependencies]
hdbscan = [
    "hdbscan>=0.8.27,<0.8.29; python_version<'3.7'",
    "hdbscan>=0.8.29; python_version>='3.7'",
]
dev = [
    "pytest>=6.2.5,<7.0; python_version<'3.7'",
    "pytest>=7.0; python_version>='3.7'",
    "pytest-cov>=2.12,<4.0; python_version<'3.7'",
    "pytest-cov>=4.0; python_version>='3.7'",
]

[project.scripts]
ddos-trace = "ddos_trace.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
