[build-system]
requires = [
    "setuptools>=59.6,<60; python_version<'3.7'",
    "setuptools>=68.0; python_version>='3.7'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ddos-trace"
version = "1.0.0"
description = "DDoS 攻击溯源分析器 - 基于 NetFlow 数据的智能化分析工具"
requires-python = ">=3.6"
dynamic = ["dependencies"]

[project.optional-dependencies]
hdbscan = ["hdbscan>=0.8.27,<0.8.29"]
dev = [
    "pytest>=6.2.5,<7.0",
    "pytest-cov>=2.12,<4.0",
]

[project.scripts]
ddos-trace = "ddos_trace.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "docs/deploy/requirements.txt"}
